Vertically align to the top to fix a Safari rendering issue

--- a/assets/css/site/contexts/content/_preview.scss
+++ b/assets/css/site/contexts/content/_preview.scss
@@ -15,6 +15,7 @@
     background-color: white;
     border: solid 1px $borderGray;
     display: inline-block;
+    vertical-align: top;
     margin: 0 $contentPadding / 2 $contentPadding;
     text-align: left;
     width: $previewWidth;
